# Hell_borne

./: CMakeLists.txt  DESCRIPTION.md  Makefile  README.md  game.cpp  game.h  main.cpp
assets/spritesheet_maker/: make_spritesheet.py
qnx/aarch64le/: cmake-toolchain-qnx-aarch64le.cmake
source_files_copy/: main.cpp
source_files_copy/src/audio/: AudioManager.h  AudioStub.h
source_files_copy/src/combat/: HealthComponent.cpp  HealthComponent.h  Weapon.cpp  Weapon.h
source_files_copy/src/core/: GameEngine.cpp  GameEngine.h  Timer.h  globals.h
source_files_copy/src/entities/: Enemy.cpp  Enemy.h  EnemySpawner.cpp  EnemySpawner.h  Player.cpp  Player.h
source_files_copy/src/graphics/: Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h  Camera.cpp  Camera.h  Texture.h
source_files_copy/src/input/: InputHandler.cpp  InputHandler.h
source_files_copy/src/persistence/: SaveSystem.cpp  SaveSystem.h
source_files_copy/src/ui/: HUDRenderer.cpp  HUDRenderer.h
source_files_copy/src/utils/: AABB.h  Vector2.h
source_files_copy/src/world/: RoomTemplate.cpp  RoomTemplate.h
tools/: generate_background.ps1
